fix(web): fix full page scroll background cutoff by placing clean fixed cover artwork directly on html/body

--- a/docker/quickstart/myaac/templates/tibiacom/basic.css
+++ b/docker/quickstart/myaac/templates/tibiacom/basic.css
@@ -4,8 +4,13 @@
 html, body {
   margin: 0px;
   padding: 0px;
+  min-height: 100vh;
   background-color: #051122;
-  min-height: 100%;
+  background-image: url(images/header/background-artwork.gif);
+  background-position: center top;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 img {
@@ -14,10 +19,6 @@ img {
 
 #ArtworkHelper {
   text-align: center;
-  background-position: top center;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-size: cover;
   width: 100%;
   min-height: 100vh;
   min-width: 1000px;
